k8s/g7-2022-staging-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: g7-staging
  namespace: org-g7
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: g7-staging
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: g7-staging
  namespace: org-g7
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
spec:
  tls:
    - hosts:
        - api.s7.sch.bme.hu
      secretName: g7-staging-cert
  rules:
    - host: api.s7.sch.bme.hu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: g7-staging
                port:
                  number: 80
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: g7-staging
  namespace: org-g7
spec:
  replicas: 1
  selector:
    matchLabels:
      app: g7-staging
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: g7-staging
    spec:
      volumes:
        - name: g7-staging
          persistentVolumeClaim:
            claimName: g7-staging
      containers:
        - name: g7-staging
          image: harbor.sch.bme.hu/org-golyakorte/cmsch:rc
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              memory: 1Gi
          volumeMounts:
            - name: g7-staging
              mountPath: /pv
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
