k8s/template-live.yaml
kind: Service
apiVersion: v1
metadata:
  name: template-live
  namespace: org-kir-prod
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: template-live
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: template-live
  namespace: org-kir-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
spec:
  tls:
    - hosts:
        - api.template.sch.bme.hu
      secretName: template-live-cert
  rules:
    - host: api.template.sch.bme.hu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: template-live
                port:
                  number: 80
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: template-live
  namespace: org-kir-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: template-live
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: template-live
    spec:
      volumes:
        - name: template-live
          persistentVolumeClaim:
            claimName: template-live
      containers:
        - name: template-live
          image: harbor.sch.bme.hu/org-golyakorte/cmsch:release
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 2
              memory: 1Gi
            requests:
              cpu: 50m
              memory: 200Mi
          volumeMounts:
            - name: template-live
              mountPath: /pv
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
